--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
-1
+<!doctype html>
+
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <title>1</title>
+  <meta name="description" content="put link to continuation here">
+  <link rel="stylesheet" href="css/styles.css?v=1.0">
+
+</head>
+
+<body>
+  1
+  <script src="js/scripts.js"></script>
+</body>
+</html>
